--- a/styles.css
+++ b/styles.css
@@ -1871,13 +1871,13 @@ div.third-column,
 
 /* Secondary button styling */
 .nav-btn.secondary {
-    background-color: #74b9ff;
+    background-color: #00b894;
     color: white;
     border: none;
 }
 
 .nav-btn.secondary:hover:not(:disabled) {
-    background-color: #0984e3;
+    background-color: #00a884;
 }
 
 .nav-btn.secondary:disabled {
